[package]
name = "rbooru"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0", features = [ "json", "blocking" ] }
gdk-pixbuf = { version = "0.8.0" }
gtk = { version = "0.8.0", features = [ "v3_20" ] }
gio = { version = "", features = [ "v2_44" ] }
booru = { git = "https://github.com/evanjs/booru" }
